added description, added main, added bin, added files, added keywords, public, MIT

--- a/package.json
+++ b/package.json
@@ -1,30 +1,43 @@
 {
   "name": "node-fzf",
   "version": "0.0.0",
-  "description": "TODO",
-  "main": "fzf.js",
+  "description": "fzf ( junegunn/fzf ) inspired cli utility for node",
+  "main": "src/index.js",
+  "bin": {
+    "nfzf": "bin/cli.js"
+  },
+  "files": [
+    "bin/cli.js",
+    "src/index.js"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "fzf"
+    "node-fzf",
+    "fzf",
+    "fuzzy",
+    "list",
+    "search",
+    "cli"
   ],
   "author": "talmobi <talmo.christian@gmail.com>",
-  "license": "UNLICENSED",
-  "private": true,
+  "license": "MIT",
+  "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/talmobi/fzf"
+    "url": "https://github.com/talmobi/node-fzf"
   },
   "bugs": {
-    "url": "https://github.com/talmobi/fzf/issues",
+    "url": "https://github.com/talmobi/node-fzf/issues",
     "email": "talmo.christian@gmail.com"
   },
   "dependencies": {
     "cli-color": "~1.2.0",
     "keypress": "~0.2.1",
     "minimist": "~1.2.0",
-    "redstar": "0.0.2"
+    "redstar": "0.0.2",
+    "ttys": "0.0.3"
   },
   "devDependencies": {}
 }
