use string-width to calculate screen/terminal width of text with special characters

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "keypress": "~0.2.1",
     "minimist": "~1.2.0",
     "redstar": "0.0.2",
+    "string-width": "~2.1.1",
     "ttys": "0.0.3"
   },
   "devDependencies": {}
