--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "files": [
     "bin/cli.js",
-    "src/index.js"
+    "src/main.js"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
