--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "src/main.js"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/test.js"
   },
   "keywords": [
     "node-fzf",
@@ -40,5 +40,8 @@
     "string-width": "~2.1.1",
     "ttys": "0.0.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "faucet": "0.0.1",
+    "tape": "~4.13.0"
+  }
 }
