--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-fzf",
   "version": "0.4.4",
   "description": "fzf ( junegunn/fzf ) inspired cli utility for node",
-  "main": "src/index.js",
+  "main": "src/main.js",
   "bin": {
     "nfzf": "bin/cli.js"
   },
