--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "keypress": "~0.2.1",
     "minimist": "~1.2.0",
     "redstar": "0.0.2",
+    "restore-cursor": "~3.1.0",
     "string-width": "~2.1.1",
     "ttys": "0.0.3"
   },
