--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "dependencies": {
     "keypress": "~0.2.1",
     "minimist": "~1.2.5",
-    "picocolors": "^1.1.1",
+    "picocolors": "~1.1.1",
     "redstar": "0.0.2",
     "restore-cursor": "~3.1.0",
     "string-width": "~2.1.1",
